Fix taxon list results wrapping style

--- a/src/styles/common/taxon.scss
+++ b/src/styles/common/taxon.scss
@@ -28,6 +28,7 @@
   }
 
   h3 {
+    white-space: normal;
     overflow: visible;
     font-weight: normal;
     margin-bottom: 8px;
